Thu May 20 14:19:29 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/RepositoryManager/repository_manager_admin_exec.cpp:
        * DAnCE/tools/Convert_Plan/Convert_Plan_Impl.cpp:
          Unicode fixes

Thu May 20 13:01:03 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/Common/CIF_Common.cpp:
          No initialization. Also removed some
          unnecessary code.

Thu May 20 11:16:29 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:

        * ciao/ComponentServer/Client_init.h:
          Code alignment

        * ciao/Servants/Connector_Servant_Impl_Base.cpp:
          Minor changes to get_all_facets

        * tests/CIF:
          Tests for Component Implementation Framework

        * tests/CIF/Common/*:
          Base library for all CIF tests.

        * tests/CIF/Navigation/*:
          Test which tests the Navigation interface.

        * tests/IDL3/ImpliedIDL/Components/EventSource/ICEventSource.mpc:
          Code alignment.

Thu May 20 10:33:32 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/docs/DDS4CCM FTF2 Issue List batch2.doc:
        * connectors/dds4ccm/docs/DDS4CCM v1-1 b2.odt:
          FTF2 batch 2 documents

Wed May 19 18:14:05 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * connectors/ami4ccm/ami4ccm/ami4ccm.mpc:

          Set the install_dir for AMI4CCM.

Wed May 19 11:00:22 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/dds/DDS_Subscriber_Base_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Update_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Write_T.h:
        * connectors/dds4ccm/impl/dds/Getter_T.cpp:
        * connectors/dds4ccm/impl/dds/QueryCondition.cpp:
        * connectors/dds4ccm/impl/dds/Reader_T.cpp:
        * connectors/dds4ccm/impl/dds/Topic.cpp:
          Layout and const changes

Wed May 19 09:49:23 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
